Window: Floor rather than round when doing hitTest for the decoration

Otherwise we may end up with coordinates that are outside the decoration
and inadvertantly failing the hittest.

BUG: 460686
(cherry picked from commit 6ef2cdc332f40eb110d7918cadae8985c384ee7c)